# javalin-graphql

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
example/: BUILD.bazel
example/src/: main.kt
src/main/kotlin/org/f355/javalin_graphql/: GraphQLController.kt
src/main/kotlin/org/f355/javalin_graphql/model/: Model.kt
src/main/org/f355/javalin_graphql/: main.kt
src/main/resources/static/playground/: index.html
