load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "javalin-graphql",
    srcs = glob([
        "src/main/**/*.kt",
    ]),
    data = glob([
        "src/main/resources/*.*",
    ]),
    deps = [
        "@maven//:com_expediagroup_graphql_kotlin_schema_generator",
        "@maven//:io_javalin_javalin",
    ],
)
